[package]
name = "rustrtc"
version = "0.3.93"
edition = "2024"
authors = ["jinti<shenjindi@fourz.cn>"]
repository = "https://github.com/restsend/rustrtc"
description = "A high-performance real-time communication library — WebRTC, RTP/SRTP, T.38 Fax, and RTP Latching"
readme = "README.md"
keywords = ["rtp", "srtp", "webrtc", "fax", "turn"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "net",
    "io-util",
] }
tracing = "0.1"
async-trait = "0.1"
bytes = { version = "1", features = ["serde"] }
aes = "0.9"
ctr = "0.10"
hmac = "0.13.0"
sha1 = "0.11.0"
sha2 = "0.11.0"
md5 = { package = "md-5", version = "0.11.0" }
p256 = { version = "0.13.2", features = ["ecdh", "std", "ecdsa", "pkcs8"] }
aes-gcm = { version = "0.10.3", features = ["std"] }
futures = "0.3.32"
crc32fast = "1.5.0"
crc32c = "0.6"
base64 = "0.22.1"
local-ip-address = "0.6"
rand = "0.10.1"
parking_lot = "0.12"
x509-parser = "0.18.1"
igd = { version = "0.12", features = ["aio"] }
rcgen = { version = "0.14.8", default-features = false, features = [
    "pem",
    "ring",
] }
spandsp-sys = { version = "0.1.5", optional = true }

[dev-dependencies]
axum = { version = "0.8", features = ["multipart"] }
turn = "0.17.1"
webrtc = "0.17.1"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "charset",
    "http2",
    "system-proxy",
    "rustls-no-provider",
] }
webrtc-util = "0.17.1"
env_logger = "0.11.10"
dtls = "0.17.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18.4"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "tls12",
    "logging",
] }
hyper-rustls = { version = "0.27", default-features = false, features = [
    "http1",
    "tls12",
    "logging",
    "native-tokio",
] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
    "tls12",
    "logging",
] }
serial_test = "3.4.0"
tower-http = { version = "0.6", features = ["fs"] }

[features]
default = []
simulator = []
t38 = ["dep:spandsp-sys"]
